<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stoneintegration.TransactionActivity" >
    
    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/transactionLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/valorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel"
        android:layout_marginTop="40dp"
        android:text="@string/valorLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <TextView
        android:id="@+id/cifraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/valueEditText"
        android:text="@string/cifraLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/valueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titleLabel"
        android:layout_alignLeft="@+id/titleLabel"
        android:layout_below="@+id/valorLabel"
        android:ems="10"
        android:hint="@string/valueEditText"
        android:inputType="number" />

    <TextView
        android:id="@+id/tipoCompraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueEditText"
        android:layout_marginTop="30dp"
        android:text="@string/tipoLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/tipoCompraRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipoCompraLabel"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/debitoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/debitoRadioButton" />

        <RadioButton
            android:id="@+id/creditoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditoRadioButton" />
    </RadioGroup>
    
    <TextView
        android:id="@+id/parcelaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipoCompraRadioGroup"
        android:layout_marginTop="20dp"
        android:text="@string/parcelaLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/parcelaRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parcelaLabel"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/aVistaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/aVistaRadioButton" />

        <RadioButton
            android:id="@+id/parceladoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parceladoRadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/parcelamentoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parcelaRadioGroup"
        android:layout_marginTop="30dp"
        android:text="@string/parcelamentoLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/parcelamentoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parcelamentoLabel"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/resultButton"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@layout/button"
        android:text="@string/resultButton" />
    
</RelativeLayout>
