<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stoneintegration.MainActivity" >

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image_title"
        android:src="@drawable/logo" />
    
    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logoImageView"
        android:layout_marginTop="10dp"
        android:text="@string/image_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/goToPrinterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@layout/button"
        android:text="@string/printerButton"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/goToCancelationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/goToPrinterButton"
        android:background="@layout/button"
        android:text="@string/cancelationButton"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/goToTransactionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/goToCancelationButton"
        android:background="@layout/button"
        android:text="@string/transactionButton"
        android:textColor="#FFFFFF" />

</RelativeLayout>