<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stoneintegration.CancelationActivity" >

    <TextView
        android:id="@+id/cancellationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cancellationLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/cancellationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@layout/button"
        android:text="@string/cancellationActivityButton"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/caEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancellationLabel"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="number" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/caLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/caEditText"
        android:layout_marginBottom="45dp"
        android:text="@string/caLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/arnEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caEditText"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/arnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caEditText"
        android:layout_marginTop="25dp"
        android:text="@string/arnLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>